# application-monitoring

./: .env.example  .gitignore  main.py  pyproject.toml
accounts/: admin.py  managers.py  models.py  serializers.py  views.py
accounts/migrations/: 0001_initial.py
core/: csrf_middleware.py  settings.py  urls.py
core/settings/: __init__.py  base.py  development.py  production.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  websites.ts
frontend/src/components/: Layout.tsx  Sidebar.tsx  WebsiteCard.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  pagination.tsx  select.tsx  sonner.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: AddWebsitePage.tsx  AuthPage.tsx  DashboardPage.tsx  EditWebsitePage.tsx  LandingPage.tsx  LoginPage.tsx  RegisterPage.tsx  SSLPage.tsx  WebsiteDetailPage.tsx  WebsitesPage.tsx
frontend/src/schemas/: index.ts
frontend/src/types/: index.ts
monitoring/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
monitoring/management/commands/: aggregate_checks.py  check_website.py  run_scheduler.py
monitoring/migrations/: 0001_initial.py  0002_aggregatedcheck.py  0003_remove_monitoredwebsite_check_interval.py  0004_sslcheck.py
monitoring/services/: checker.py  scheduler.py
