[project]
name = "application-monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-ratelimit>=4.1.0",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]
